// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <SelectInput /> rendering should render empty select field when values are not supplied 1`] = `
<Header
  className=""
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
      "values": undefined,
    }
  }
  touched={false}
>
  <SelectInput
    name="input-field-name"
    onChange={[Function]}
    options={Array []}
    value="baz"
  />
</Header>
`;

exports[`Form component <SelectInput /> rendering should render no select field when not visible 1`] = `""`;

exports[`Form component <SelectInput /> rendering should render select field correctly 1`] = `
<Header
  className=""
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
      "values": Object {
        "bar": "Bar",
        "baz": "Baz",
        "foo": "Foo",
      },
    }
  }
  touched={false}
>
  <SelectInput
    name="input-field-name"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "foo",
          "name": "foo",
          "value": "Foo",
        },
        Object {
          "key": "bar",
          "name": "bar",
          "value": "Bar",
        },
        Object {
          "key": "baz",
          "name": "baz",
          "value": "Baz",
        },
      ]
    }
    value="baz"
  />
</Header>
`;
